<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_bids"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_my_bids" />
        <item
            android:id="@+id/nav_upload_item_for_sell"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_upload_items" />
        <item
        android:id="@+id/nav_my_profile"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_my_profile" />

        <item
            android:id="@+id/nav_trans_history"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_trans_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_wishlist" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share_n_earn"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_contact_us" />
        </menu>
    </item>
    <group />

</menu>
