<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bidding_interface2.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_bids"
        android:name="com.example.bidding_interface2.MyBidsFragment"
        android:label="@string/menu_my_bids"
        tools:layout="@layout/fragment_my_bids" />

    <fragment
        android:id="@+id/nav_upload"
        android:name="com.example.bidding_interface2.UploadFragment"
        android:label="@string/menu_upload_items"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.bidding_interface2.SettingsFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_transaction_history"
        android:name="com.example.bidding_interface2.SettingsFragment"
        android:label="@string/menu_trans_history"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bidding_interface2.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_wish"
        android:name="com.example.bidding_interface2.SettingsFragment"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.bidding_interface2.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_cust_support"
        android:name="com.example.bidding_interface2.MyProfileFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_my_profile" />
</navigation>